style.css
@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Poppins&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Poppins", sans-serif;
  background-color: rgb(20, 20, 20);
  color: whitesmoke;
  display: flex;
  flex-direction: column;
  position: relative;
  width: 100vw;
  height: 100%;
  overflow-x: hidden;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  min-height: 8vh;
  background-color: rgb(20, 20, 20);
}

.title {
  color: whitesmoke;
  letter-spacing: 6px;
  margin: 0 20px;
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.nav-links {
  display: flex;
  justify-content: space-between;
  width: 30%;
  margin: 0 20px;
}

.nav-links a {
  color: whitesmoke;
  text-decoration: none;
  letter-spacing: 3px;
  font-weight: bold;
  font-size: 14px;
}

.nav-links li {
  list-style: none;
  padding: 5px;
}

.join {
  border: 1px solid whitesmoke;
  border-radius: 10px;
}

.burger > div {
  width: 25px;
  height: 3px;
  background-color: whitesmoke;
  margin: 5px;
  transition: 0.4s ease;
}

.burger {
  margin: 0 20px;
  display: none;
}

.exit .line1 {
  transform: rotate(-45deg) translate(-5px, 6px);
}
.exit .line2 {
  opacity: 0;
}
.exit .line3 {
  transform: rotate(45deg) translate(-5px, -6px);
}

.container {
  position: relative;
  height: 92vh;
  width: 100%;
}

.container::after {
  content: "";
  background-color: rgba(4, 0, 56, 0.2);
  width: 100%;
  height: 92vh;
  position: absolute;
  top: 0;
  left: 0;
}

.container .headline {
  position: absolute;
  top: 70%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: whitesmoke;
  z-index: 2;
  font-family: "Poppins", sans-serif;
}

.headline h1 {
  font-size: 88px;
  margin: 30px 0;
}

.headline h2 {
  font-size: 30px;
}

video {
  height: 100%;
  width: 100%;
  object-fit: cover;
}

.img-one {
  height: 600px;
  width: 100%;
  background: url("assets/ttc.jpg");
  background-size: cover;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center;
}

.img-one::after {
  content: "";
  height: 600px;
  width: 100%;
  background-color: rgba(28, 2, 36, 0.2);
  position: absolute;
}

.img-two {
  height: 700px;
  width: 100%;
  background: url("assets/stage2.jpg");
  background-size: cover;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center;
}

.img-two::after {
  content: "";
  height: 700px;
  width: 100%;
  background-color: rgba(49, 2, 59, 0.2);
  position: absolute;
}

.img-three {
  height: 600px;
  width: 100%;
  background: url("assets/queenstreet.jpg");
  background-size: cover;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center;
}

.about {
  height: 110vh;
  width: 100%;
}

.about-text {
  margin: 80px;
}

.about h3 {
  font-size: 30px;
  font-weight: normal;
  margin: 100px 0px 30px 0px;
}

.about {
  font-size: 20px;
  display: flex;
  align-items: center;
}

.banner {
  font-size: 30px;
}

.nominees {
  height: 100%;
  width: 100%;
  display: grid;
}

.nom-headlines {
  margin: 250px 0px 100px 0px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  letter-spacing: 5px;
}

.nom-headlines h2 {
  font-size: 50px;
  margin-bottom: 30px;
}

.underline {
  width: 30%;
  height: 3px;
  background-color: whitesmoke;
}

.nom-headlines h3 {
  font-size: 28px;
  margin-top: 20px;
}

.col-container {
  margin: 100px 0px 250px 0px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  text-align: center;
  font-size: 18px;
  letter-spacing: 2px;
}

.col-one {
  width: 400px;
}

.col-two {
  width: 400px;
}

.col-three {
  width: 400px;
}

.col-container h3 {
  font-size: 26px;
  margin: 30px 0px;
  letter-spacing: 3px;
}

.join-us {
  height: 80vh;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.join-us h3 {
  font-size: 40px;
  margin-bottom: 60px;
}
.join-us h4 {
  font-size: 20px;
}

.img-four {
  height: 700px;
  width: 100%;
  background: url("assets/nothin.jpg");
  background-size: cover;
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-position: center;
}

.img-four::after {
  content: "";
  height: 700px;
  width: 100%;
  background-color: rgba(3, 3, 58, 0.2);
  position: absolute;
}

footer {
  height: 80px;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 12px;
}

/* responsive styling */

@media screen and (max-width: 1230px) {
  body {
    overflow-x: hidden;
  }
  .nav-links {
    width: 50%;
  }
  .container .headline {
    left: 40%;
  }
  .container h1 {
    font-size: 40px;
  }
  .container h2 {
    font-size: 22px;
  }
  .about-text {
    margin: 80px;
  }
  .about h3 {
    margin: 80px 0px 30px 0px;
  }
  .banner {
    margin-top: 150px;
  }
  .nom-headlines h2 {
    font-size: 40px;
  }
  .nom-headlines h3 {
    font-size: 25px;
  }
  .underline {
    width: 50%;
  }

@media screen and (max-width: 780px) {
  body {
    overflow-x: hidden;
  }
  .img-one .img-two .img-three .img-four {
    background-attachment: inherit;
  }
  .container h1 {
    font-size: 28px;
    margin: 10px 0;
  }
  .container h2 {
    font-size: 16px;
  }
  .nav-links {
    position: absolute;
    right: 0;
    height: 94vh;
    top: 6vh;
    background-color: rgb(20, 20, 20);
    flex-direction: column;
    align-items: center;
    justify-content: space-evenly;
    transform: translateX(130%);
    transition: transform 0.5s ease-in;
    z-index: 10;
    display: none;
  }
  .burger {
    display: block;
    cursor: pointer;
  }
  .about-text {
    margin: 70px 30px;
  }
  .about h3 {
    font-size: 20px;
    font-weight: normal;
    margin: 100px 0px 30px 0px;
  }
  .about {
    font-size: 18px;
    overflow-x: hidden;
  }
  .banner {
    font-size: 20px;
    margin-top: 20px;
  }
  .nominees {
    overflow-x: hidden;
  }
  .nominees h2 {
    font-size: 30px;
    margin: 30px 0px;
  }
  .underline {
    width: 70%;
    margin-bottom: 20px;
  }
  .nominees h3 {
    font-size: 20px;
    margin: 20px;
    text-align: center;
    font-weight: bold;
  }
  .col-one {
    width: 300px;
  }
  .col-two {
    width: 300px;
  }
  .col-three {
    width: 300px;
  }
  .join-us h3 {
    font-size: 30px;
  }
  .join-us h4 {
    font-size: 18px;
  }
}

@media screen and (max-width: 430px) {
  .about-text {
    margin: 0px 20px;
  }
  .about h3 {
    font-size: 20px;
    font-weight: normal;
    margin: 30px 0px;
  }
  .about {
    font-size: 16px;
    overflow-x: hidden;
    height: 140vh;
  }
  .banner {
    font-size: 20px;
    margin-top: 0px;
  }
  .nominees h2 {
    font-size: 20px;
    margin: 10px 0px;
  }
  .nominees h3 {
    font-size: 18px;
  }
}

.nav-active {
  transform: translateX(10%);
  background-color: rgb(20, 20, 20);
  display: inherit;
}

